--- a/test/AutoprefixerHost.Tests/AutoprefixerHost.Tests.csproj
+++ b/test/AutoprefixerHost.Tests/AutoprefixerHost.Tests.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <Product>Autoprefixer Host for .NET: Tests</Product>
     <VersionPrefix>3.0.36</VersionPrefix>
-    <TargetFrameworks>net462;netcoreapp3.1;net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net462;netcoreapp3.1;net5.0;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TestTfmsInParallel>false</TestTfmsInParallel>
     <IsTestProject>true</IsTestProject>
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <IsPackable>false</IsPackable>
@@ -14,7 +15,7 @@
   <Import Project="../../build/common.props" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" VersionOverride="17.10.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" VersionOverride="17.12.0" />
     <PackageReference Include="NUnit" VersionOverride="3.14.0" />
     <PackageReference Include="NUnit3TestAdapter" VersionOverride="4.6.0" />
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" />
