--- a/src/AutoprefixerHost/AutoprefixerHost.csproj
+++ b/src/AutoprefixerHost/AutoprefixerHost.csproj
@@ -23,7 +23,8 @@
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <PackageTags>Autoprefixer;CSS</PackageTags>
-    <PackageReleaseNotes>Added support for the Autoprefixer version 10.4.22.0.</PackageReleaseNotes>
+    <PackageReleaseNotes>1. Added support for the Autoprefixer version 10.4.22.0;
+2. Performed a migration to the modern C# null/not-null checks.</PackageReleaseNotes>
     <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
 
